--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -6,10 +6,9 @@ spring:
       uri: ${MONGODB_URI:mongodb+srv://jiya:jiya@cluster0.yh9go.mongodb.net/springchat}
 
 server:
-  port: ${PORT:8081} # Use PORT env var, default to 8081
+  port: ${PORT:8081} 
 
 app:
-  # jwt:
-  #   secret: ${JWT_SECRET}  # Secret from env
+
   frontend:
-    url: ${FRONTEND_URL:http://localhost:5173} # Frontend URL from env or fallback
+    url: ${FRONTEND_URL:http://localhost:5173} 
